--- a/public/tiktokpets.css
+++ b/public/tiktokpets.css
@@ -21,7 +21,6 @@ button {
 
 header {
     width: 85%;
-    max-width: 400px;
     display: flex;
     justify-content: space-between;
     margin: 40px 0;
@@ -77,7 +76,6 @@ label, input {
 }
 
 form {
-    max-width: 400px;
     width: 85%;
     border-radius: 16px;
     background-color: rgba(238, 29, 82, 0.9); /* For browsers that do not support gradients */
@@ -93,4 +91,12 @@ form {
 #logo {
     font-family: 'Boogaloo', cursive;
     font-size: 32px;
+}
+
+/*for tablet*/
+@media (min-width: 480px) {
+}
+
+/*for desktop*/
+@media (min-width: 900px) {
 }
