--- a/public/tiktokpets.css
+++ b/public/tiktokpets.css
@@ -3,100 +3,169 @@
 * {
     font-family: 'Inter', sans-serif;
     font-weight: 400;
-}
-
-main {
-    width: 100%;
-}
-
-button {
-    height: 45px;
-    width: 100px;
-    border-radius: 10px;
-    font-size: 16px;
-    font-weight: 600;
     color: white;
-    background-color: rgba(238, 29, 82, 0.9);
+}
+
+body {
+  margin: 8%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 header {
-    width: 85%;
-    display: flex;
-    justify-content: space-between;
-    margin: 40px 0;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
 }
 
-.button {
-    display: flex;
-    align-items: center;
+main {
+  margin-top: 25px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.text {
-    height: 30px;
-    border-radius: 10px;
-    border-style: solid;
-    border-width: thin;
-    border-color: silver;
+button {
+  height: 45px;
+  width: 95px;
+  border-radius: 10px;
+  font-size: 16px;
+  font-weight: 600;
+  color: white;
+  background-color: rgba(238, 29, 82, 0.9);
 }
 
-.input {
-    margin: 10px;
+label {
+  font-weight: 600;
+  font-size: 16px;
 }
 
-.input>h1 {
-    font-size: 20px;
-    font-weight: 600;
+input {
+  padding-left: 15px;
+  height: 35px;
+  width: 100%;
+  border-radius: 12px;
+  border: 2px solid silver;
+  color: black;
+  font-size: 16px;
 }
 
-.input>label {
-    font-weight: 600;
+div.input {
+  display: flex;
+  flex-direction: column;
+  margin: 10px;
+  width: 70%;
+  min-width: 200px;
 }
 
-label, input {
-    font-size: 16px;
-}
-
-.container {
-    width: 100%;
-    min-width: 280px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-#submit {
-    margin: 40px 0;
-}
-#t1 {
-    border-color: rgb(105, 201, 208);
-}
-
-#title {
-    display: inline-block;
-}
-
-form {
-    width: 85%;
-    border-radius: 16px;
-    background-color: rgba(238, 29, 82, 0.9); /* For browsers that do not support gradients */
-    background-image: linear-gradient(to right, rgba(238, 29, 82, 0.9), rgb(105, 201, 208));
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px 0;
-    padding-bottom: 30px;
-    color: white;
+div.container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 16px;
+  background-color: rgba(238, 29, 82, 0.9); /* For browsers that do not support gradients */
+  background-image: linear-gradient(110deg, rgba(238, 29, 82, 0.9), rgb(105, 201, 208));
+  padding: 40px 0;
+  margin: 30px;
 }
 
 #logo {
-    font-family: 'Boogaloo', cursive;
-    font-size: 32px;
+  color: black;
+  font-family: 'Boogaloo', cursive;
+  font-size: 32px;
+}
+
+
+#form_header > h2 {
+  font-size: 20px;
+  font-weight: 600;
+}
+
+#form_header {
+  display: flex;
+  align-items: center;
+}
+
+#t1 {
+  border-color: rgb(105, 201, 208);
+}
+
+#continue_button {
+  margin-top: 30px;
 }
 
 /*for tablet*/
 @media (min-width: 480px) {
+  header, main {   
+    margin-top: 40px;
+    max-width: 600px;
+  }
+
+  button {
+    font-size: 20px;
+    height: 60px;
+    width: 145px;
+  }
+
+  input {
+    height: 45px;
+    padding-left: 20px;
+  }
+
+  div.input {
+    margin: 25px;
+    width: 70%;
+  }
+
+  div.container {
+    margin: 75px;
+    padding: 60px 0;
+  }
+
+  #form_header > h2 {
+    font-size: 24px;
+  }
+
+  #logo {
+    font-size: 48px;
+  }
 }
 
 /*for desktop*/
-@media (min-width: 900px) {
+@media (min-width: 900px) {  
+  body {
+    margin: 0 50px;
+    margin-top: 80px;
+  }
+
+  header {
+    justify-content: center;
+  }
+
+  header, main {   
+    margin-top: 40px;
+    max-width: 800px;
+  }
+
+  button {
+    height: 75px;
+    width: 160px;
+  }
+
+  input {
+    height: 55px;
+    padding-left: 25px;
+  }
+
+  div.input {
+    margin: 35px;
+  }
+
+  #videos_button {
+    position: absolute;
+    right: 100px;
+  }
 }
