--- a/public/videoData.css
+++ b/public/videoData.css
@@ -5,39 +5,42 @@
     font-weight: 400;
 }
 
-main {
+body {
+  margin: 8%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+header {  
+  margin: 40px;
   width: 100%;
-  margin-top: 180px;
+  display: flex;
+  justify-content: center;
+}
+
+main {
+  margin-top: 60px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 button {
-    height: 45px;
-    width: 100px;
-    border-radius: 10px;
-    font-size: 16px;
-    font-weight: 600;
-    color: white;
-    background-color: rgba(238, 29, 82, 0.9);
+  height: 45px;
+  width: 95px;
+  border-radius: 10px;
+  font-size: 16px;
+  font-weight: 600;
+  color: white;
+  background-color: rgba(238, 29, 82, 0.9);
 }
 
-header {
-    width: 85%;
-    max-width: 400px;
-    display: flex;
-    justify-content: space-around;
-    margin: 40px 0;
-}
-
-h2{
+h2 {
   font-family: 'Boogaloo', cursive;
   font-weight: 600;
   font-size: 20px;
-}
-
-.button {
-    display: flex;
-  justify-content: space-around;
-    align-items: center;
 }
 
 .container {
@@ -59,15 +62,51 @@ h2{
 }
 
 #submit {
-    margin: 50px 0;
-}
-
-
-#title {
-    display: inline-block;
+    margin-top: 60px;
 }
 
 #logo {
     font-family: 'Boogaloo', cursive;
     font-size: 32px;
 }
+
+/*for tablet*/
+@media (min-width: 480px) {
+  header, main {   
+    margin-top: 60px;
+    max-width: 600px;
+  }
+
+  button {
+    font-size: 20px;
+    height: 60px;
+    width: 145px;
+  }
+
+  h2 {
+    font-size: 24px;
+  }
+
+  #logo {
+    font-size: 48px;
+  }
+}
+
+/*for desktop*/
+@media (min-width: 900px) {
+  body {
+    margin: 0 50px;
+    margin-top: 80px;
+  }
+
+  header, main {   
+    margin-top: 80px;
+    max-width: 800px;
+  }
+
+  button {
+    height: 75px;
+    width: 160px;
+  }
+}
+
