--- a/public/videoData.css
+++ b/public/videoData.css
@@ -13,21 +13,23 @@ body {
 }
 
 header {  
-  margin: 40px;
   width: 100%;
   display: flex;
   justify-content: center;
 }
 
 main {
-  margin-top: 60px;
+  margin-top: 25px;
+  height: 499px;
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: flex-end;
 }
 
 button {
+  margin-top: 40px;
   height: 45px;
   width: 95px;
   border-radius: 10px;
@@ -65,15 +67,24 @@ h2 {
 
 /*for tablet*/
 @media (min-width: 480px) {
+  body {
+    margin: 0 40px;
+    margin-top: 80px;
+  }
+
   header, main {   
-    margin-top: 60px;
     max-width: 600px;
+  }
+
+  main {
+    height: 730px;
   }
 
   button {
     font-size: 20px;
     height: 60px;
     width: 145px;
+    margin-top: 150px;
   }
 
   h2 {
@@ -87,19 +98,14 @@ h2 {
 
 /*for desktop*/
 @media (min-width: 900px) {
-  body {
-    margin: 0 50px;
-    margin-top: 80px;
-  }
-
-  header, main {   
-    margin-top: 80px;
-    max-width: 800px;
+  main {
+    height: 775px;
   }
 
   button {
     height: 75px;
     width: 160px;
+    margin-top: 175px;
   }
 }
 
